--- a/examples/rm-transcription-manager-prototype.html
+++ b/examples/rm-transcription-manager-prototype.html
@@ -71,7 +71,7 @@
     <!-- Main Content -->
     <div class="flex h-[calc(100vh-60px)]">
         <!-- Left Panel - List -->
-        <div class="flex-1 overflow-y-auto p-6">
+        <div class="w-[400px] overflow-y-auto p-4 border-r border-gray-200">
             
             <!-- Compact Stats -->
             <div class="grid grid-cols-4 gap-3 mb-4">
